# anchor-starter

./: README.md
01-counter/: Anchor.toml
01-counter/tests/: counter.ts
01.Client/: .gitignore  package.json
01.Client/src/: 00.Airdrop.ts  00.Starter.ts  01.SolTransfer.ts  02.CreateMintAccount.ts  02.SolTransferManual.ts  03.CreateMintAccount.ts  03.CreateTokenAccount.ts  04.CreateAssociatedTokenAccount.ts  04.CreateTokenAccount.ts  05.CreateAssociatedTokenAccount.ts  05.MintTokens.ts  06.MintTokens.ts  06.TransferTokens.ts  07.CreateMetadataAccount.ts  07.TransferTokens.ts  test.ts  utils.ts
01.counter/: Anchor.toml  package-lock.json
01.counter/tests/: counter.ts
02-pda-counter/: Anchor.toml  package-lock.json  package.json
02.Anchor/00.hello_anchor/: .gitignore  Anchor.toml
02.Anchor/01.counter/: Anchor.toml
02.Anchor/02.pda-counter/: Anchor.toml
02.Anchor/03.pda-counter-token/: Anchor.toml
02.Anchor/03.pda-counter-token/programs/counter/: Cargo.toml
02.Anchor/03.pda-counter-token/programs/counter/src/: lib.rs
02.pda-counter/: Anchor.toml
02.pda-counter/tests/: counter.ts
03-pda-counter-token/: Anchor.toml  package.json
03-pda-counter-token/programs/counter/: Cargo.toml
03-pda-counter-token/programs/counter/src/: lib.rs
03-pda-counter-token/tests/: counter.ts
03.Frontend/01.WalletAdapter/: package.json
03.Frontend/02/: package.json
03.Frontend/02.Anchor/: package.json
03.pda-counter-token/: Anchor.toml  package-lock.json
04-frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
04.frontend/: package.json
(+52 files in other folders)
