[package]
name = "counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

# Notes to self
# use solana 1.14.x of solana-cli
# run this also: cargo update -p borsh@0.10.3 --precise 0.9.3
[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0", features = ["metadata"] }
mpl-token-metadata = { version = "=1.9.0", features = ["no-entrypoint"] }
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
blake3 = "=1.3.1"
